--- a/agronet_be/requirements.txt
+++ b/agronet_be/requirements.txt
@@ -4,3 +4,5 @@ djangorestframework-simplejwt==4.8.0
 psycopg2==2.9.1
 gunicorn==20.1.0
 django-heroku==0.3.1
+pyjwt==2.1.0
+django-cors-headers==3.9.0
