--- a/agronet_fe/package.json
+++ b/agronet_fe/package.json
@@ -25,5 +25,7 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "_id": "agronet_fe@0.1.0",
+  "readme": "ERROR: No README data found!"
 }
